Bug 404303 - Lokalize replaces all characters to … when ... are previewed/replaced
Summary: Lokalize replaces all characters to … when ... are previewed/replaced
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-13 19:53 UTC by Enol P.
Modified: 2019-03-07 06:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Enol P. 2019-02-13 19:53:47 UTC
SUMMARY
Using "Search and replace in files" I suffer a bug which previews/replaces all characters, no matter what, to … when I try to replace only ... characters. Also after that, entering ... characters into "Replace" field previews all translations as . or .. depending on how many . character the translation has.

STEPS TO REPRODUCE
1. Open "Search and replace in files" tab
2. Search some string
3. In "Replace" field enter ...
4. In "With" field enter …
5. Press "Mass Replace" or "Replace" button

OBSERVED RESULT
Replacing is bugged.

EXPECTED RESULT
Replacing should be ... to … .

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.14
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1
Comment 1 Simon Depiets 2019-02-14 01:14:49 UTC
Is the "Regular expression" checkbox checked ?
Comment 2 Enol P. 2019-02-14 19:40:28 UTC
Ops... I forgot to mention but no, "Regular expression" checkbox was UNCHECK
Comment 3 Simon Depiets 2019-03-07 06:37:48 UTC
Git commit 36134191a32b4635006ad2d3ade54416d25db2b2 by Simon Depiets.
Committed on 05/03/2019 at 22:42.
Pushed by sdepiets into branch 'master'.

Fix inversed ternary operator

M  +1    -1    src/filesearch/filesearchtab.cpp

https://commits.kde.org/lokalize/36134191a32b4635006ad2d3ade54416d25db2b2
Comment 4 Simon Depiets 2019-03-07 06:39:13 UTC
Thank you for your bug report. It will be fixed in 19.04.

As the condition was reversed in the code, you can actually check the Regular expression box meanwhile to do a normal mass string replacement.