Fix inversed ternary operator

BUG: 404303